--- a/main.ipynb
+++ b/main.ipynb
@@ -89,275 +89,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>uniq_id</th>\n",
-       "      <th>crawl_timestamp</th>\n",
-       "      <th>product_url</th>\n",
-       "      <th>product_name</th>\n",
-       "      <th>product_category_tree</th>\n",
-       "      <th>pid</th>\n",
-       "      <th>retail_price</th>\n",
-       "      <th>discounted_price</th>\n",
-       "      <th>image</th>\n",
-       "      <th>is_FK_Advantage_product</th>\n",
-       "      <th>...</th>\n",
-       "      <th>category1</th>\n",
-       "      <th>category2</th>\n",
-       "      <th>category3</th>\n",
-       "      <th>category4</th>\n",
-       "      <th>category5</th>\n",
-       "      <th>category6</th>\n",
-       "      <th>category7</th>\n",
-       "      <th>category8</th>\n",
-       "      <th>description_cleaned</th>\n",
-       "      <th>description_normalized</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>c2d766ca982eca8304150849735ffef9</td>\n",
-       "      <td>2016-03-25 22:59:23 +0000</td>\n",
-       "      <td>http://www.flipkart.com/alisha-solid-women-s-c...</td>\n",
-       "      <td>Alisha Solid Women's Cycling Shorts</td>\n",
-       "      <td>['Clothing', \"Women's Clothing\", 'Lingerie, Sl...</td>\n",
-       "      <td>SRTEH2FF9KEDEFGF</td>\n",
-       "      <td>999.0</td>\n",
-       "      <td>379.0</td>\n",
-       "      <td>[\"http://img5a.flixcart.com/image/short/u/4/a/...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Clothing</td>\n",
-       "      <td>Women's Clothing</td>\n",
-       "      <td>Lingerie, Sleep &amp; Swimwear</td>\n",
-       "      <td>Shorts</td>\n",
-       "      <td>Alisha Shorts</td>\n",
-       "      <td>Alisha Solid Women's Cycling Shorts</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>key features of alisha solid women's cycling s...</td>\n",
-       "      <td>radiant may ribbon nippl white old diamond kin...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>7f7036a6d550aaa89d34c77bd39a5e48</td>\n",
-       "      <td>2016-03-25 22:59:23 +0000</td>\n",
-       "      <td>http://www.flipkart.com/fabhomedecor-fabric-do...</td>\n",
-       "      <td>FabHomeDecor Fabric Double Sofa Bed</td>\n",
-       "      <td>['Furniture', 'Living Room Furniture', 'Sofa B...</td>\n",
-       "      <td>SBEEH3QGU7MFYJFY</td>\n",
-       "      <td>32157.0</td>\n",
-       "      <td>22646.0</td>\n",
-       "      <td>[\"http://img6a.flixcart.com/image/sofa-bed/j/f...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Furniture</td>\n",
-       "      <td>Living Room Furniture</td>\n",
-       "      <td>Sofa Beds &amp; Futons</td>\n",
-       "      <td>FabHomeDecor Fabric Double Sofa Bed (Finish Co...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>fab. home. decor fabric double sofa bed.  pric...</td>\n",
-       "      <td>radiant may ribbon nippl white old diamond kin...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>f449ec65dcbc041b6ae5e6a32717d01b</td>\n",
-       "      <td>2016-03-25 22:59:23 +0000</td>\n",
-       "      <td>http://www.flipkart.com/aw-bellies/p/itmeh4grg...</td>\n",
-       "      <td>AW Bellies</td>\n",
-       "      <td>['Footwear', \"Women's Footwear\", 'Ballerinas',...</td>\n",
-       "      <td>SHOEH4GRSUBJGZXE</td>\n",
-       "      <td>999.0</td>\n",
-       "      <td>499.0</td>\n",
-       "      <td>[\"http://img5a.flixcart.com/image/shoe/7/z/z/r...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Footwear</td>\n",
-       "      <td>Women's Footwear</td>\n",
-       "      <td>Ballerinas</td>\n",
-       "      <td>AW Bellies</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>key features of aw bellies sandals wedges heel...</td>\n",
-       "      <td>radiant may ribbon nippl white old diamond kin...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0973b37acd0c664e3de26e97e5571454</td>\n",
-       "      <td>2016-03-25 22:59:23 +0000</td>\n",
-       "      <td>http://www.flipkart.com/alisha-solid-women-s-c...</td>\n",
-       "      <td>Alisha Solid Women's Cycling Shorts</td>\n",
-       "      <td>['Clothing', \"Women's Clothing\", 'Lingerie, Sl...</td>\n",
-       "      <td>SRTEH2F6HUZMQ6SJ</td>\n",
-       "      <td>699.0</td>\n",
-       "      <td>267.0</td>\n",
-       "      <td>[\"http://img5a.flixcart.com/image/short/6/2/h/...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Clothing</td>\n",
-       "      <td>Women's Clothing</td>\n",
-       "      <td>Lingerie, Sleep &amp; Swimwear</td>\n",
-       "      <td>Shorts</td>\n",
-       "      <td>Alisha Shorts</td>\n",
-       "      <td>Alisha Solid Women's Cycling Shorts</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>key features of alisha solid women's cycling s...</td>\n",
-       "      <td>radiant may ribbon nippl white old diamond kin...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>bc940ea42ee6bef5ac7cea3fb5cfbee7</td>\n",
-       "      <td>2016-03-25 22:59:23 +0000</td>\n",
-       "      <td>http://www.flipkart.com/sicons-all-purpose-arn...</td>\n",
-       "      <td>Sicons All Purpose Arnica Dog Shampoo</td>\n",
-       "      <td>['Pet Supplies', 'Grooming', 'Skin &amp; Coat Care...</td>\n",
-       "      <td>PSOEH3ZYDMSYARJ5</td>\n",
-       "      <td>220.0</td>\n",
-       "      <td>210.0</td>\n",
-       "      <td>[\"http://img5a.flixcart.com/image/pet-shampoo/...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Pet Supplies</td>\n",
-       "      <td>Grooming</td>\n",
-       "      <td>Skin &amp; Coat Care</td>\n",
-       "      <td>Shampoo</td>\n",
-       "      <td>Sicons All Purpose Arnica Dog Shampoo (500 ml)</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>specifications of sicons all purpose arnica do...</td>\n",
-       "      <td>radiant may ribbon nippl white old diamond kin...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 26 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                            uniq_id            crawl_timestamp  \\\n",
-       "0  c2d766ca982eca8304150849735ffef9  2016-03-25 22:59:23 +0000   \n",
-       "1  7f7036a6d550aaa89d34c77bd39a5e48  2016-03-25 22:59:23 +0000   \n",
-       "2  f449ec65dcbc041b6ae5e6a32717d01b  2016-03-25 22:59:23 +0000   \n",
-       "3  0973b37acd0c664e3de26e97e5571454  2016-03-25 22:59:23 +0000   \n",
-       "4  bc940ea42ee6bef5ac7cea3fb5cfbee7  2016-03-25 22:59:23 +0000   \n",
-       "\n",
-       "                                         product_url  \\\n",
-       "0  http://www.flipkart.com/alisha-solid-women-s-c...   \n",
-       "1  http://www.flipkart.com/fabhomedecor-fabric-do...   \n",
-       "2  http://www.flipkart.com/aw-bellies/p/itmeh4grg...   \n",
-       "3  http://www.flipkart.com/alisha-solid-women-s-c...   \n",
-       "4  http://www.flipkart.com/sicons-all-purpose-arn...   \n",
-       "\n",
-       "                            product_name  \\\n",
-       "0    Alisha Solid Women's Cycling Shorts   \n",
-       "1    FabHomeDecor Fabric Double Sofa Bed   \n",
-       "2                             AW Bellies   \n",
-       "3    Alisha Solid Women's Cycling Shorts   \n",
-       "4  Sicons All Purpose Arnica Dog Shampoo   \n",
-       "\n",
-       "                               product_category_tree               pid  \\\n",
-       "0  ['Clothing', \"Women's Clothing\", 'Lingerie, Sl...  SRTEH2FF9KEDEFGF   \n",
-       "1  ['Furniture', 'Living Room Furniture', 'Sofa B...  SBEEH3QGU7MFYJFY   \n",
-       "2  ['Footwear', \"Women's Footwear\", 'Ballerinas',...  SHOEH4GRSUBJGZXE   \n",
-       "3  ['Clothing', \"Women's Clothing\", 'Lingerie, Sl...  SRTEH2F6HUZMQ6SJ   \n",
-       "4  ['Pet Supplies', 'Grooming', 'Skin & Coat Care...  PSOEH3ZYDMSYARJ5   \n",
-       "\n",
-       "   retail_price  discounted_price  \\\n",
-       "0         999.0             379.0   \n",
-       "1       32157.0           22646.0   \n",
-       "2         999.0             499.0   \n",
-       "3         699.0             267.0   \n",
-       "4         220.0             210.0   \n",
-       "\n",
-       "                                               image  is_FK_Advantage_product  \\\n",
-       "0  [\"http://img5a.flixcart.com/image/short/u/4/a/...                    False   \n",
-       "1  [\"http://img6a.flixcart.com/image/sofa-bed/j/f...                    False   \n",
-       "2  [\"http://img5a.flixcart.com/image/shoe/7/z/z/r...                    False   \n",
-       "3  [\"http://img5a.flixcart.com/image/short/6/2/h/...                    False   \n",
-       "4  [\"http://img5a.flixcart.com/image/pet-shampoo/...                    False   \n",
-       "\n",
-       "   ...     category1              category2                   category3  \\\n",
-       "0  ...      Clothing       Women's Clothing  Lingerie, Sleep & Swimwear   \n",
-       "1  ...     Furniture  Living Room Furniture          Sofa Beds & Futons   \n",
-       "2  ...      Footwear       Women's Footwear                  Ballerinas   \n",
-       "3  ...      Clothing       Women's Clothing  Lingerie, Sleep & Swimwear   \n",
-       "4  ...  Pet Supplies               Grooming            Skin & Coat Care   \n",
-       "\n",
-       "                                           category4  \\\n",
-       "0                                             Shorts   \n",
-       "1  FabHomeDecor Fabric Double Sofa Bed (Finish Co...   \n",
-       "2                                         AW Bellies   \n",
-       "3                                             Shorts   \n",
-       "4                                            Shampoo   \n",
-       "\n",
-       "                                        category5  \\\n",
-       "0                                   Alisha Shorts   \n",
-       "1                                             NaN   \n",
-       "2                                             NaN   \n",
-       "3                                   Alisha Shorts   \n",
-       "4  Sicons All Purpose Arnica Dog Shampoo (500 ml)   \n",
-       "\n",
-       "                             category6 category7 category8  \\\n",
-       "0  Alisha Solid Women's Cycling Shorts       NaN       NaN   \n",
-       "1                                  NaN       NaN       NaN   \n",
-       "2                                  NaN       NaN       NaN   \n",
-       "3  Alisha Solid Women's Cycling Shorts       NaN       NaN   \n",
-       "4                                  NaN       NaN       NaN   \n",
-       "\n",
-       "                                 description_cleaned  \\\n",
-       "0  key features of alisha solid women's cycling s...   \n",
-       "1  fab. home. decor fabric double sofa bed.  pric...   \n",
-       "2  key features of aw bellies sandals wedges heel...   \n",
-       "3  key features of alisha solid women's cycling s...   \n",
-       "4  specifications of sicons all purpose arnica do...   \n",
-       "\n",
-       "                              description_normalized  \n",
-       "0  radiant may ribbon nippl white old diamond kin...  \n",
-       "1  radiant may ribbon nippl white old diamond kin...  \n",
-       "2  radiant may ribbon nippl white old diamond kin...  \n",
-       "3  radiant may ribbon nippl white old diamond kin...  \n",
-       "4  radiant may ribbon nippl white old diamond kin...  \n",
-       "\n",
-       "[5 rows x 26 columns]"
+       "265"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data = pd.read_csv(data_folder + \"processed_flipkart_customer_review.csv\")\n",
-    "data.head()"
+    "len(data[\"category1\"].value_counts())"
    ]
   },
   {
@@ -1550,7 +1298,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Eliminating less frequent classes (Threshold: 0.5 %)"
+    "## Eliminating less frequent classes (Threshold: 0.5 %)\n",
+    "\n",
+    "- The primary category consists of a large number of class labels (265) with varying frequency. \n",
+    "In order to focus on relevant classes, I only consider class labels that constitute at least 0.5 percent of the total training set (20,000). \n",
+    "- Thus, the final dataset is reduced to 19,287 records spanning 18 class labels. \n"
    ]
   },
   {
@@ -1837,7 +1589,7 @@
    "source": [
     "## Data Cleaning\n",
     "\n",
-    "Steps:\n"
+    "- The text data (description) is preprocessed by eliminating urls, non-printable characters, missing delimiters, letter repetitions, non-word repetitions, informal parentheses, phrase repetition and noisy text."
    ]
   },
   {
@@ -1872,7 +1624,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Normalization"
+    "## Data Normalization\n",
+    "\n",
+    "- After the basic preprocessing steps, the data is subjected to a further word-level normalization using typo-fixing and stemming. "
    ]
   },
   {
@@ -1906,7 +1660,9 @@
     "id": "2S6FtF4_jlOD"
    },
    "source": [
-    "# Data Preparation"
+    "# Data Preparation\n",
+    "\n",
+    "This dataset is further split into training and validation sets, using a standard stratified 80:20 split. "
    ]
   },
   {
@@ -1969,7 +1725,16 @@
     "id": "wqk2LCOP0VUN"
    },
    "source": [
-    "# Feature_Extraction"
+    "# Feature_Extraction\n",
+    "\n",
+    "Following feature-extraction techniques are used to convert the description text to a fixed-dimensional input vector:\n",
+    "\n",
+    "- Word Frequency (BoW) using unigrams, bigrams and trigrams. \n",
+    "- Word Frequency (BoW) using bigrams.\n",
+    "- Word Frequency (BoW) using trigrams. \n",
+    "- TF-IDF using unigrams, bigrams and trigrams. \n",
+    "- TF-IDF using bigrams.\n",
+    "- TF-IDF using trigrams. \n"
    ]
   },
   {
@@ -2057,7 +1822,9 @@
     "id": "9QGfX9Sw5A8t"
    },
    "source": [
-    "# Machine Learning models with feature combination"
+    "# Machine Learning models with feature combination\n",
+    "\n",
+    "I have explored multiple standard machine learning models for the given task. This includes Naive Bayes, Random Forest, K Nearest Neighbor, SVM and Linear SCV classifiers. "
    ]
   },
   {
