--- a/main.ipynb
+++ b/main.ipynb
@@ -1626,7 +1626,7 @@
    ],
    "source": [
     "sample_text = data.sample()[text_label].values.tolist()[0]\n",
-    "data[text_label].apply(lambda x : pp.normalize_text(x, stemming = True, remove_punct = True, remove_stopwords = True))\n",
+    "data[text_label] = data[text_label].apply(lambda x : pp.normalize_text(x, stemming = True, remove_punct = True, remove_stopwords = True))\n",
     "    \n",
     "print(\"\\nBefore Normalization: \", sample_text)\n",
     "print(\"\\nAfter Normalization: \", pp.normalize_text(sample_text, stemming = True,\n",
